Fix: put the save notification in the bottom to avoid overlapping with the navbar

--- a/static/index.css
+++ b/static/index.css
@@ -151,5 +151,5 @@ body {
 
 #saved-toast {
   position: absolute;
-  top: 1rem;
+  bottom: 1rem;
 }
